--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <Button
+                android:id="@+id/reload"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/reload"
+                app:backgroundTint="#3d7894"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintHorizontal_bias="0.9"
+                app:layout_constraintVertical_bias="0.05"/>
+
             <LinearLayout
                 android:layout_width="380dp"
                 android:layout_height="654dp"
@@ -44,15 +57,6 @@
                         android:text="Name"
                         android:textSize="25dp" />
                 </LinearLayout>
-
-
-                <Button
-                    android:id="@+id/reload"
-                    android:layout_width="50dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="20dp"
-                    android:background="@drawable/reload"
-                    app:backgroundTint="#3d7894" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
