--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
 
             <LinearLayout
                 android:layout_width="380dp"
-                android:layout_height="654dp"
+                android:layout_height="705dp"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/back"
                 android:orientation="vertical"
@@ -235,30 +235,32 @@
                         android:textSize="20dp"
                         android:textStyle="bold" />
                 </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:orientation="horizontal">
-                <Button
-                    app:backgroundTint="#3d7894"
-                    android:id="@+id/changeBtn"
-                    android:layout_width="225dp"
-                    android:layout_height="52dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:text="Редактировать" />
 
-
-                <Button
-                    android:id="@+id/exit"
-                    android:layout_width="50dp"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="45dp"
-                    android:layout_marginTop="35dp"
-                    android:background="@drawable/exit"
-                    app:backgroundTint="#3d7894" />
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/changeBtn"
+                        android:layout_width="225dp"
+                        android:layout_height="52dp"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="20dp"
+                        android:text="Редактировать"
+                        app:backgroundTint="#3d7894" />
+
+
+                    <Button
+                        android:id="@+id/exit"
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="45dp"
+                        android:layout_marginTop="35dp"
+                        android:background="@drawable/exit"
+                        app:backgroundTint="#3d7894" />
 
                 </LinearLayout>
 
