--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".DoctorActivity">
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/exit"
+        android:layout_width="54dp"
+        android:layout_height="46dp"
+        android:background="@drawable/exit"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.97"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
