--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -69,31 +69,15 @@
             android:text="@string/sign_in"
             app:backgroundTint="#3d7894"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/textRegister"
+            android:layout_width="290dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_marginTop="10dp"
-            android:orientation="horizontal">
+            android:text="Зарегистрироваться"
+            app:backgroundTint="#3d7894"/>
 
-            <TextView
-                android:id="@+id/textRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Регистрация"
-            android:textSize="17dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="25dp"/>
-
-            <TextView
-                android:id="@+id/textForgetPassoword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Забыли пароль"
-                android:textSize="17dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginLeft="65dp"/>
-
-        </LinearLayout>
 
     </LinearLayout>
 
