--- a/app/src/main/res/layout/fragment_take_note.xml
+++ b/app/src/main/res/layout/fragment_take_note.xml
@@ -166,16 +166,7 @@
                     android:layout_gravity="center" />
 
 
-                <ListView
-                    android:id="@+id/listView"
-                    android:layout_width="320dp"
-                    android:layout_height="80dp"
-                    android:layout_gravity="center"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/scrollView2"
-                    app:layout_constraintVertical_bias="0.7" />
+
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/openCalendar"
@@ -197,12 +188,15 @@
                     android:gravity="center"
                     android:text="Записаться"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ListView
+                    android:id="@+id/listView"
+                    android:layout_width="320dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center" />
+
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
