--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,6 +44,7 @@
             android:inputType="textEmailAddress" />
 
         <TextView
+            android:id="@+id/text"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
